# aoc-2024

./: CMakeLists.txt
day-01/: day-01.cpp
day-02/: day-02.cpp  input.txt
day-03/: day-03.cpp
day-04/: day-04.cpp
