cmake_minimum_required(VERSION 3.10)
project(AOC-2024)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add the executable
# add_executable(day-01 ./day-01/day-01.cpp)
# add_executable(day-02 ./day-02/day-02.cpp)
# add_executable(day-03 ./day-03/day-03.cpp)
add_executable(day-04 ./day-04/day-04.cpp)
